turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:66: error: not found: value init
		init();
                ^